--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "snyk": "snyk --dev test",
     "frontend": "gulp build",
     "test": "nyc --require babel-core/register mocha ./test/**/*.spec.js",
+    "test:frontend": "gulp test",
     "lint": "eslint *.js api/**/*.js config/redis.js config/**/*.js test/**/*.js"
   },
   "repository": {
@@ -53,24 +54,25 @@
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "eslint-plugin-async-await": "0.0.0",
-    "eslint-plugin-babel": "^4.0.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
-    "eslint": "^3.10.0",
-    "should": "^11.2.0",
-    "mocha": "^3.1.2",
-    "nyc": "^10.1.2",
-    "supertest": "^3.0.0",
-    "forever": "^0.15.3",
     "cssfilter": "0.0.10",
     "del": "^2.2.2",
+    "eslint": "^3.10.0",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-async-await": "0.0.0",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "forever": "^0.15.3",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.5",
     "gulp-clean-css": "^3.0.2",
     "gulp-concat": "^2.6.0",
+    "gulp-debug": "^3.1.0",
+    "gulp-eslint": "^3.0.1",
+    "gulp-html-lint": "0.0.1",
     "gulp-jshint": "^2.0.1",
     "gulp-newer": "^1.2.0",
     "gulp-plumber": "^1.1.0",
@@ -81,11 +83,14 @@
     "gulp-strip-css-comments": "^1.2.0",
     "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.4",
-    "run-sequence": "^1.2.2",
-    "xsslint": "^0.1.3",
-    "gulp-eslint": "^3.0.1",
     "jshint-stylish": "^2.2.1",
     "lodash": "^4.17.4",
-    "safe-regex": "^1.1.0"
+    "mocha": "^3.1.2",
+    "nyc": "^10.1.2",
+    "run-sequence": "^1.2.2",
+    "safe-regex": "^1.1.0",
+    "should": "^11.2.0",
+    "supertest": "^3.0.0",
+    "xsslint": "^0.1.3"
   }
 }
