--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "phone": "^1.0.8",
     "range_check": "^1.4.0",
     "request-promise": "^4.1.1",
+    "minimatch":"^3.0.2",
     "through": "^2.3.8",
     "validator": "^6.2.0",
     "winston": "^2.3.0",
@@ -55,8 +56,6 @@
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "eslint-plugin-async-await": "0.0.0",
-    "eslint-plugin-babel": "^4.0.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
