--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "helmet-csp": "^2.1.0",
     "hpp": "^0.2.1",
     "ioredis": "^2.4.0",
+    "minimatch": "^3.0.2",
     "phone": "^1.0.8",
     "range_check": "^1.4.0",
     "request-promise": "^4.1.1",
-    "minimatch": "^3.0.2",
+    "strict-rate-limiter": "^0.2.0",
     "through": "^2.3.8",
     "validator": "^6.2.0",
     "winston": "^2.3.0",
@@ -53,6 +54,7 @@
     "hiredis": "^0.5.0"
   },
   "devDependencies": {
+    "async": "^2.1.5",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.15.0",
