Added config/routes paths in code rating

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -10,6 +10,7 @@ ratings:
   paths:
     - frontend/scripts/app/**
     - api/**
+    - config/routes/**
 exclude_paths:
   - node_modules/*
   - eslint-rules/*
