--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:frontend": "snyk test && gulp test",
     "dev": "gulp",
     "prepublish": "npm run snyk-protect",
-    "lint": "gulp test &&  node_modules/.bin/htmlhint --config .htmlhintrc frontend/html/*.html",
+    "lint": "gulp test",
     "build": "npm run lint && gulp build"
   },
   "repository": {
@@ -84,6 +84,7 @@
     "gulp-debug": "^3.1.0",
     "gulp-eslint": "^3.0.1",
     "gulp-html-lint": "0.0.1",
+    "gulp-htmlhint": "^0.3.1",
     "gulp-jshint": "^2.0.1",
     "gulp-newer": "^1.2.0",
     "gulp-plumber": "^1.1.0",
