--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -9,7 +9,9 @@ engines:
 ratings:
   paths:
     - frontend/scripts/app/**
-    # Add paths for backend code checks
+    - api/**
+    - config/**
+    - test/**
 exclude_paths:
   - node_modules/*
   - eslint-rules/*
