--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -17,5 +17,6 @@
   "space-tab-mixed-disabled": true,
   "id-class-ad-disabled": true,
   "href-abs-or-rel": false,
-  "attr-unsafe-chars": true
+  "attr-unsafe-chars": true,
+  "space-tab-mixed-disabled": "space2"
 }
