specific eslinrc for codeclimate

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,8 @@
 engines:
+  eslint:
+    enabled: true
+    config:
+      config: .eslintrc.codeclimate.js
   duplication:
     enabled: true
     config:
