--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "connect-redis": "^3.2.0",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
+    "eslint-plugin-async-await": "0.0.0",
     "express": "^4.15.2",
     "express-content-length-validator": "^1.0.0",
     "express-promise-router": "^1.1.1",
@@ -47,12 +48,12 @@
     "phone": "^1.0.8",
     "range_check": "^1.4.0",
     "request-promise": "^4.1.1",
+    "snyk": "^1.25.2",
     "strict-rate-limiter": "^0.2.0",
     "validator": "^6.2.0",
     "winston": "^2.3.0",
     "xss": "^0.3.3",
-    "zipcodes": "^2.1.0",
-    "snyk": "^1.25.2"
+    "zipcodes": "^2.1.0"
   },
   "optionalDependencies": {
     "hiredis": "^0.5.0"
