--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dev": "gulp",
     "prepublish": "npm run snyk-protect",
     "lint": "gulp test",
-    "build": "npm run lint && gulp build"
+    "build": "npm run lint && gulp build",
+    "lint:backend":"./node_modules/.bin/eslint api/ config/ app.js index.js server-config.js  trace.config.js test/"
   },
   "repository": {
     "type": "git",
