--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -17,6 +17,5 @@
   "space-tab-mixed-disabled": true,
   "id-class-ad-disabled": true,
   "href-abs-or-rel": false,
-  "attr-unsafe-chars": true,
-  "space-tab-mixed-disabled": "space2"
+  "attr-unsafe-chars": true
 }
