--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prepublish": "npm run snyk-protect",
     "lint": "gulp test",
     "build": "npm run lint && gulp build",
-    "lint:backend":"./node_modules/.bin/eslint api/ config/ app.js index.js server-config.js  trace.config.js test/"
+    "lint:backend": "./node_modules/.bin/eslint api/ config/ app.js index.js server-config.js  trace.config.js test/"
   },
   "repository": {
     "type": "git",
@@ -79,6 +79,7 @@
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-batch": "^1.0.5",
     "gulp-cache": "^0.4.5",
     "gulp-clean-css": "^3.0.2",
     "gulp-concat": "^2.6.0",
@@ -95,6 +96,7 @@
     "gulp-size": "^2.1.0",
     "gulp-strip-css-comments": "^1.2.0",
     "gulp-uglify": "^2.0.0",
+    "gulp-watch": "^4.3.11",
     "htmlhint": "^0.9.13",
     "husky": "^0.13.2",
     "lodash": "^4.17.4",
