--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,10 +5,14 @@ filter:
     - node_modules/*
     - eslint-rules/*
     - frontend/scripts/libs/*
-    - gulpfile.babel.js
+    - gulpfile.js
     - safe-regex-shell.js
 build:
   tests:
     override:
       - eslint-run "frontend/scripts/app/**/*.js"
-      # Also need to include paths for fronted as well
+      - eslint-run "api/**/*.js"
+      - eslint-run "config/**/*.js"
+      - eslint-run "test/**/*.js"
+      - eslint-run "test/**/*.js"
+      - eslint-run "*.js"
