--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "helmet-csp": "^2.1.0",
     "hpp": "^0.2.1",
     "ioredis": "^2.4.0",
+    "minimatch": "^3.0.2",
     "phone": "^1.0.8",
     "range_check": "^1.4.0",
     "request-promise": "^4.1.1",
     "snyk": "^1.25.2",
     "strict-rate-limiter": "^0.2.0",
+    "validator": "^7.0.0",
     "winston": "^2.3.0",
     "xss": "^0.3.3",
     "zipcodes": "^2.1.0"
