--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "through": "^2.3.8",
     "validator": "^7.0.0",
     "winston": "^2.3.0",
+    "winston-sentry": "^0.1.5",
     "xss": "^0.3.3",
     "zipcodes": "^2.1.0"
   },
