--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-content-length-validator": "^1.0.0",
     "express-promise-router": "^1.1.1",
     "express-session": "^1.15.0",
+    "express-winston": "^2.3.0",
     "helmet": "^3.1.0",
     "helmet-csp": "^2.1.0",
     "hpp": "^0.2.1",
