--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ bower_components/
 .nyc_output/
 npm-debug.log*
 public
+
+# codeship credentials required to be deployed to Google Cloud
+# @see https://documentation.codeship.com/pro/getting-started/encryption/
+codeship.aes
+google_deployment.env
