--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "babel-register": "^6.23.0",
     "body-parser": "^1.17.1",
     "connect-redis": "^3.2.0",
-    "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "eslint-plugin-async-await": "0.0.0",
     "express": "^4.15.2",
@@ -51,6 +50,7 @@
     "request-promise": "^4.1.1",
     "snyk": "^1.25.2",
     "strict-rate-limiter": "^0.2.0",
+    "tough-cookie": "^2.3.2",
     "validator": "^7.0.0",
     "winston": "^2.3.0",
     "winston-sentry": "^0.1.5",
