--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "frontend": "gulp build",
     "test": "nyc --require babel-core/register mocha ./test/**/*.spec.js",
     "precommit": "gulp test",
-    "test:frontend": "snyk test && gulp test",
+    "test:frontend": "snyk test && gulp test && npm run protractor",
+    "protractor": "protractor protractor.config.js",
     "dev": "gulp",
     "prepublish": "npm run snyk-protect",
     "lint": "gulp test",
@@ -70,6 +71,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "cssfilter": "0.0.10",
     "del": "^2.2.2",
     "eslint": "^3.17.0",
