--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "snyk": "snyk --dev test",
     "snyk-protect": "snyk protect",
     "frontend": "gulp build",
-    "test": "nyc --require babel-core/register mocha ./test/**/*.spec.js",
+    "test": "nyc --reporter=lcov --require babel-core/register mocha ./test/**/*.spec.js",
     "precommit": "gulp test",
     "test:frontend": "snyk test && gulp test",
     "dev": "gulp",
@@ -70,6 +70,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
+    "codeclimate-test-reporter": "^0.4.1",
     "cssfilter": "0.0.10",
     "del": "^2.2.2",
     "eslint": "^3.17.0",
