feat: initialize Codeship Pro CI/CD integration. [x] TODO #1: quickly generate and change all *.encrypted files - TODO #2: configure on google cloud - TODO #3: deploy redis and configure

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ coverage/
 # @see https://documentation.codeship.com/pro/getting-started/encryption/
 codeship.aes
 google_deployment.env
+**/*.decrypted
 
 *.rdb
 !/public/robots.txt
+
