--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -4,19 +4,22 @@ app:
     dockerfile_path: Dockerfile
   encrypted_env_file: deploy/staging/environment.env.encrypted
   cached: true
-
-nginx:
-  build:
-    image: flash2-staging/nginx
-    dockerfile_path: nginx/Dockerfile
-  encrypted_env_file: deploy/staging/environment.env.encrypted
-  cached: true
-
+  links:
+    - redis
 redis:
-  build:
-    image: flash2-staging/redis
-    dockerfile_path: redis/Dockerfile
-  encrypted_env_file: deploy/staging/environment.env.encrypted
+  image: redis
+# nginx:
+#   build:
+#     image: flash2-staging/nginx
+#     dockerfile_path: nginx/Dockerfile
+#   encrypted_env_file: deploy/staging/environment.env.encrypted
+#   cached: true
+
+# redis:
+#   build:
+#     image: flash2-staging/redis
+#     dockerfile_path: redis/Dockerfile
+#   encrypted_env_file: deploy/staging/environment.env.encrypted
 
 google_cloud_deployment_app:
   image: zachflower/google-cloud-deployment
@@ -25,12 +28,12 @@ google_cloud_deployment_app:
   volumes:
     - ./deploy/:/deploy
 
-google_cloud_deployment_nginx:
-  image: zachflower/google-cloud-deployment
-  add_docker: true
-  encrypted_env_file: deploy/staging/google_deployment.env.encrypted
-  volumes:
-    - ./deploy/:/deploy
+# google_cloud_deployment_nginx:
+#   image: zachflower/google-cloud-deployment
+#   add_docker: true
+#   encrypted_env_file: deploy/staging/google_deployment.env.encrypted
+#   volumes:
+#     - ./deploy/:/deploy
 
 #google_cloud_deployment_redis:
 #  image: zachflower/google-cloud-deployment
