feat: Codeship Integration - forked from `flash2-staging-melvyn` repo, then added some improvements

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -65,7 +65,7 @@ http {
 
     ssl_session_cache shared:SSL:10m;
 
-    ssl_dhparam /etc/nginx/dhparam.pem;
+    ssl_dhparam /etc/nginx/ssl/dhparam.pem;
     #https://raymii.org/s/tutorials/Strong_SSL_Security_On_nginx.html
     #https://habrahabr.ru/post/252821/
     #Generate using `openssl dhparam -out dhparam.pem 4096` - it takes loooong time ~ 10 minutes and makes your laptop warm
