--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -2,12 +2,22 @@
   steps:
   - type: parallel
     steps:
+    - name: Testing Frontend
+      service: app
+      command: ./node_modules/.bin/gulp test
+
+    - name: Testing Backend
+      service: app
+      command: npm test
+  - type: parallel
+    steps:
     - service: app
       type: push
       image_name: gcr.io/flash2-staging/app
       image_tag: "{{ .CommitID }}"
       registry: https://gcr.io
       dockercfg_service: gcr_dockercfg
+      tag: staging
     #- service: nginx
     #  type: push
     #  image_name: gcr.io/flash2-staging/nginx
@@ -25,6 +35,7 @@
     steps:
     - service: google_cloud_deployment_app
       command: /deploy/deploy_app.sh
+      tag: staging
     #- service: google_cloud_deployment_nginx
     #  command: /deploy/deploy_nginx.sh
     #- service: google_cloud_deployment_redis
