--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -9,6 +9,9 @@
     - name: Testing Backend
       service: app
       command: npm test
+    - name: Upload to codeclimate
+      service: app
+      command: ./node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info
   - type: parallel
     steps:
     - service: app
