--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,17 +1,9 @@
 - type: serial
   steps:
-  - type: parallel
-    steps:
-    - name: Testing Frontend
-      service: app
-      command: ./node_modules/.bin/gulp test
+  - name: run test
+    service: app
+    command: ./tests.sh
 
-    - name: Testing Backend
-      service: app
-      command: npm test
-    - name: Upload to codeclimate
-      service: app
-      command: ./node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info
   - type: parallel
     steps:
     - service: app
