--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,8 @@
 FROM nginx:1.11.10
 
-ADD nginx/nginx.conf /etc/nginx/nginx.conf
-ADD nginx/blockuseragents.rules /etc/nginx/blockuseragents.rules
-ADD nginx/dhparam.pem /etc/nginx/ssl/
-ADD nginx/ssl/* /etc/nginx/ssl/
+ADD nginx.conf /etc/nginx/nginx.conf
+ADD blockuseragents.rules /etc/nginx/blockuseragents.rules
+ADD dhparam.pem /etc/nginx/ssl/
+ADD ssl/* /etc/nginx/ssl/
 
 EXPOSE 443 80
