https://github.com/starlightgroup/flash2-redis/issues/3

--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -68,6 +68,8 @@ rename-command FLUSHDB ""
 # Rename commands that degrade perfomance quickly
 rename-command KEYS ""
 rename-command SAVE ""
+
+# Because it renames DEBUG SEGFAULT
 rename-command DEBUG ""
 
 # Disable scripting https://redis.io/commands#scripting
