--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -20,7 +20,7 @@ stop-writes-on-bgsave-error yes
 rdbcompression yes
 rdbchecksum yes
 dbfilename dump.rdb
-dir /tmp/
+dir /data/
 
 
 ################################## SECURITY ###################################
