--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,37 +1,37 @@
 - type: serial
-  steps:
-  - name: run test
-    service: app
-    command: ./tests.sh
+  #steps:
+  #- name: run test
+  #  service: app
+  #  command: ./tests.sh
+
+
+#
+# build docker image and push to registry
+#
 
   - type: parallel
     steps:
-    - service: app
+    - service: staging_build_app
       type: push
       image_name: gcr.io/flash2-staging/app
       image_tag: "{{ .CommitID }}"
       registry: https://gcr.io
-      dockercfg_service: gcr_dockercfg
+      dockercfg_service: staging_gcr_dockercfg
       tag: staging
-    #- service: nginx
-    #  type: push
-    #  image_name: gcr.io/flash2-staging/nginx
-    #  image_tag: "{{ .CommitID }}"
-    #  registry: https://gcr.io
-    #  dockercfg_service: gcr_dockercfg
-    #-  service: redis                         
-    #   type: push
-    #   image_name: gcr.io/flash2-staging/redis
-    #   image_tag: latest
-    #   registry: https://gcr.io
-    #   dockercfg_service: gcr_dockercfg
+    - service: develop_build_app
+      type: push
+      image_name: gcr.io/flash2-develop/app
+      image_tag: "{{.Branch}}.{{.CommitID}}"
+      registry: https://gcr.io
+      dockercfg_service: develop_gcr_dockercfg
+      tag: ^(development|feature/multibranch)
+
+#
+# deploy app to k8s cluster
+#
 
   - type: parallel
     steps:
-    - service: google_cloud_deployment_app
+    - service: staging_google_cloud_deployment_app
       command: /deploy/deploy_app.sh
       tag: staging
-    #- service: google_cloud_deployment_nginx
-    #  command: /deploy/deploy_nginx.sh
-    #- service: google_cloud_deployment_redis
-    #  command: /deploy/deploy_redis.sh
