--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -28,7 +28,7 @@
     - service: develop_build_app
       type: push
       image_name: gcr.io/flash2-development/app
-      image_tag: "{{.Branch}}.{{.CommitID}}"
+      image_tag: "{{.CommitID}}"
       registry: https://gcr.io
       dockercfg_service: develop_gcr_dockercfg
       tag: ^(development|feature/multibranch)
