--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -8,6 +8,7 @@ staging_build_app:
     dockerfile_path: Dockerfile
   encrypted_env_file: deploy/staging/environment.env.encrypted
   cached: true
+  default_cache_branch: "staging"
   links:
     - redis
 redis:
@@ -18,6 +19,16 @@ develop_build_app:
     image: flash2-staging/app
     dockerfile_path: Dockerfile
   encrypted_env_file: deploy/staging/environment.env.encrypted
+  cached: true
+  default_cache_branch: "development"
+  links:
+    - redis
+
+prod_build_app:
+  build: 
+    image: flash2-production/app
+    dockerfile_path: Dockerfile
+  encrypted_env_file: deploy/prod/environment.env.encrypted
   cached: true
   default_cache_branch: "feature/multibranch"
   links:
@@ -36,6 +47,12 @@ staging_google_cloud_deployment_app:
   image: zachflower/google-cloud-deployment
   add_docker: true
   encrypted_env_file: deploy/staging/google_deployment.env.encrypted
+  environment:
+    CLUSTER_NAME: flash2-staging
+    COMPUTE_ZONE: us-central1-b
+    IMAGE_REPO: gcr.io/flash2-staging
+    NODE_ENV: staging
+    REPLICAS: 3
   volumes:
     - ./deploy/:/deploy
 
@@ -52,6 +69,19 @@ develop_google_cloud_deployment_app:
   volumes:
     - ./deploy/:/deploy
 
+prod_google_cloud_deployment_app:
+  image: zachflower/google-cloud-deployment
+  add_docker: true
+  encrypted_env_file: deploy/prod/google_deployment.env.encrypted
+  environment:
+    CLUSTER_NAME: flash2-production
+    COMPUTE_ZONE: us-central1-b
+    IMAGE_REPO: gcr.io/flash2-production
+    NODE_ENV: production
+    REPLICAS: 3
+  volumes:
+    - ./deploy/:/deploy
+
 #
 # dockercfg configuration
 #
@@ -64,3 +94,7 @@ develop_gcr_dockercfg:
   image: codeship/gcr-dockercfg-generator
   add_docker: true
   encrypted_env_file: deploy/develop/google_deployment.env.encrypted
+production_gcr_dockercfg:
+  image: codeship/gcr-dockercfg-generator
+  add_docker: true
+  encrypted_env_file: deploy/prod/google_deployment.env.encrypted
