--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -94,7 +94,7 @@ develop_gcr_dockercfg:
   image: codeship/gcr-dockercfg-generator
   add_docker: true
   encrypted_env_file: deploy/develop/google_deployment.env.encrypted
-production_gcr_dockercfg:
+prod_gcr_dockercfg:
   image: codeship/gcr-dockercfg-generator
   add_docker: true
   encrypted_env_file: deploy/prod/google_deployment.env.encrypted
