made backend be running on /tacticalsales/

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,5 +4,6 @@ ADD nginx.conf /etc/nginx/nginx.conf
 ADD blockuseragents.rules /etc/nginx/blockuseragents.rules
 ADD dhparam.pem /etc/nginx/ssl/
 ADD ssl/* /etc/nginx/ssl/
+ADD www/* /usr/share/nginx/html
 
 EXPOSE 443 80
