--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,10 +8,10 @@ http {
   }
   server_tokens off;
   include /etc/nginx/blockuseragents.rules;
-  
+
   # X-Frame-Options is to prevent from clickJacking attack
   add_header X-Frame-Options SAMEORIGIN;
-  add_header Referrer-Header  "same-origin"; 
+  add_header Referrer-Header  "same-origin";
   #  disable content-type sniffing on some browsers.
   add_header X-Content-Type-Options "nosniff";
   # This header enables the Cross-site scripting (XSS) filter
@@ -22,10 +22,10 @@ http {
   proxy_cache_path /var/run/cache levels=1:2 keys_zone=STATIC:10m max_size=100m;
   proxy_cache_key "$scheme$request_method$host$request_uri$is_args$args";
   proxy_cache_valid 200 60m;
-  proxy_buffering off; 
+  proxy_buffering off;
   # add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' img-src 'self' style-src 'self' 'unsafe-inline' font-src 'self' frame-src object-src 'none'";
-  
-  
+
+
   #limit_req_zone $binary_remote_addr zone=one:10m rate=120r/m;
 
   server {
@@ -36,7 +36,11 @@ http {
     if ($request_method !~ ^(GET|HEAD|POST)$) {
       return 444;
     }
-    location /api/ {
+
+    index  index.html;
+    root /usr/share/nginx/html;
+
+    location /tacticalsales/api/ {
       #limit_req zone=one;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Host $http_host;
@@ -44,7 +48,7 @@ http {
       add_header Cache-Control "no-store";
       expires -1;
     }
-    location / {
+    location /tacticalsales/ {
       proxy_cache STATIC;
       proxy_cache_bypass $http_cache_control;
       proxy_set_header X-Real-IP $remote_addr;
@@ -54,8 +58,6 @@ http {
       add_header X-Proxy-Cache $upstream_cache_status;
       proxy_pass http://node-app;
       expires 60;
-
-
     }
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
