tune development nginx server to allow site operate under /tacticalsales/

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
       #limit_req zone=one;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Host $http_host;
-      proxy_pass http://node-app/api/;
+      proxy_pass http://node-app/tacticalsales/api/;
       add_header Cache-Control "no-store";
       expires -1;
     }
@@ -56,7 +56,7 @@ http {
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $http_host;
       add_header X-Proxy-Cache $upstream_cache_status;
-      proxy_pass http://node-app;
+      proxy_pass http://node-app/tacticalsales/;
       expires 60;
     }
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
