add wordpress site placeholder to docker-compose being used for developers to make local deployment

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,12 @@ http {
     server app-server:8000;
     keepalive 64;
   }
+
+  upstream wordpress {
+    server wordpress:80;
+    keepalive 64;
+  }
+
   server_tokens off;
   include /etc/nginx/blockuseragents.rules;
 
@@ -29,6 +35,15 @@ http {
 
     index  index.html;
     root /usr/share/nginx/html;
+
+    location / {
+      #limit_req zone=one;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Host $http_host;
+      proxy_pass http://wordpress/;
+      add_header Cache-Control "no-store";
+      expires -1;
+    }
 
     location /tacticalsales/api/ {
       #limit_req zone=one;
