feat: add api keys and disable unit tests for prod

--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -17,10 +17,10 @@
       command: ./tests.sh
       tag: ^(development)
 
-    - name: run production test
-      service: prod_build_app
-      command: ./tests.sh
-      tag: ^(production)
+  #  - name: run production test
+  #    service: prod_build_app
+  #    command: ./tests.sh
+  #    tag: ^(production)
   
   #
   # build docker image and push to registry
