--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,6 +40,7 @@ http {
       #limit_req zone=one;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Host $http_host;
+      proxy_set_header X-Forwarded-Proto https;
       proxy_pass http://wordpress/;
       add_header Cache-Control "no-store";
       expires -1;
