--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "forever": "^0.15.3",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.5",
     "gulp-clean-css": "^3.0.2",
