--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "connect-redis": "^3.2.0",
     "csurf": "^1.9.0",
     "eslint-plugin-async-await": "0.0.0",
+    "eslint-plugin-no-unsafe-regex": "^1.0.0",
     "express": "^4.15.2",
     "express-content-length-validator": "^1.0.0",
     "express-promise-router": "^1.1.1",
