--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint": "gulp test",
     "build": "npm run lint && gulp build",
     "lint:backend": "./node_modules/.bin/eslint api/ config/ app.js index.js server-config.js  trace.config.js test/"
+    "install":"./node_modules/.bin/gulp build"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,6 @@
   "main": "index.js",
   "snyk": true,
   "dependencies": {
-    "@risingstack/trace": "^3.4.0",
     "analytics-node": "^2.4.0",
     "autopilot-api": "^2.0.0",
     "babel-register": "^6.23.0",
