--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-html-lint": "0.0.1",
     "gulp-htmlhint": "^0.3.1",
-    "gulp-image": "^2.7.5",
+    "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.1",
     "gulp-newer": "^1.2.0",
     "gulp-plumber": "^1.1.0",
