--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-register": "^6.23.0",
     "body-parser": "^1.17.1",
     "connect-redis": "^3.2.0",
+    "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "eslint-plugin-async-await": "0.0.0",
     "eslint-plugin-no-unsafe-regex": "^1.0.0",
