set CSP - NGINX
set CSP in NGINX Config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,8 @@ http {
     root /usr/share/nginx/html;
 
     location / {
+	add_header Content-Security-Policy "default-src 'self' data: blob: cdn.jsdelivr.net *.segment.com segment.com *.wistia.com cdn.segment.com/analytics.js *.akamaihd.net api.segment.io sentry.io/api/; script-src 'self' data: 'unsafe-inline' 'unsafe-eval' ssl.google-analytics.com www.google-analytics.com api.segment.io cdn.ravenjs.com stats.g.doubleclick.net www.google.com/ads/ga-audiences cdn.jsdelivr.net cdn.rawgit.com *.wistia.com segment.com *.segment.com cdn.segment.com *.litix.io ajax.cloudflare.com amp.cloudflare.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com *.segment.com amp.cloudflare.com; img-src 'self' data: *.akamaihd.net *.wistia.com *.litix.io www.google-analytics.com stats.g.doubleclick.net www.google.com www.google.ru www.google.fr www.google.co.in www.google.co.jp www.google.com.ar www.google.co.il www.google.de www.google.ca www.google.com.pk www.google.ie www.google.com.vn www.google.com.ua www.google.com.tw www.google.es amp.cloudflare.com ssl.google-analytics.com; font-src 'self' data: fonts.gstatic.com cdn.jsdelivr.net fast.wistia.com/fonts/WistiaOpenSansSemiBold.woff; connect-src 'self' data: blob: cdn.jsdelivr.net *.segment.com segment.com *.wistia.com cdn.segment.com/analytics.js *.akamaihd.net api.segment.io sentry.io/api/; media-src 'self' data: blob: *.wistia.com embedwistia-a.akamaihd.net; object-src 'none'; upgrade-insecure-requests; sandbox allow-forms allow-scripts; report-uri https://sentry.io/api/133524/csp-report/?sentry_key=68ae2c197a6440efac407117aec0326f";
+
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
